k8s/charlie/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api
  namespace: charlie
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: charlie-api
      labels:
        name: api
    spec:
      nodeSelector:
        node-role.kubernetes.io/node-api: ""
      imagePullSecrets:
      - name: registry
      containers:
      - name: api-web
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["web"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: trace
            mountPath: /app/storage/logs/
          - name: apache
            mountPath: /var/log/apache/
        readinessProbe:
          httpGet:
            path: /commit.txt
            port: 80
            httpHeaders:
              - name: Host
                value: charlie-api.razorpay.in
          initialDelaySeconds: 60
          periodSeconds: 120
        livenessProbe:
          httpGet:
            path: /commit.txt
            port: 80
            httpHeaders:
              - name: Host
                value: charlie-api.razorpay.in
          initialDelaySeconds: 60
          periodSeconds: 2
        lifecycle:
          preStop:
            exec:
              command: ["/bin/rm","-f","/app/public/commit.txt",";","sleep","5",";","/usr/sbin/apachectl","-k","graceful-stop"]
      - name: api-sqs-main
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php","artisan","down"]
      - name: api-sqs-gen-live
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "api-gen-live", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-gen-test
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "api-gen-test", "20"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-webhooks-live
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "webhooks-live", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-webhooks-test
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "webhooks-test", "20"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-webhooks-failure
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "webhooks-failure", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-invoice-email
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "invoice-emails", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-invoice-reports
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "invoice-reports", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-es-sync
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "es-sync", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-emails
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "emails", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-subscription-charge
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "subscription-charge", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      - name: api-sqs-batch
        image: razorpay/api:e7f30768b83b69e4e7c20b7cca6fd57a60832e00
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]
        args: ["sqs_multi_default", "batch", "10"]
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/php", "artisan", "down"]
      terminationGracePeriodSeconds: 60
      volumes:
      - name: trace
        hostPath:
          path: /var/log/fluentd/splunk/api/trace
      - name: apache
        hostPath:
          path: /var/log/fluentd/splunk/api/apache
      dnsPolicy: ClusterFirst
      restartPolicy: Always
