k8s/charlie/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: api
  namespace: charlie
spec:
  rules:
  - host: charlie-api.razorpay.in
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
